[tool.poetry]
name = "tap-upwork"
version = "0.0.2"
description = "`tap-upwork` is a Singer tap for UpWork, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Joao Amaral"]
keywords = [
    "ELT",
    "UpWork",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.31.1" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"
cached-property = "^1" # Remove after Python 3.7 support is dropped

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.31.1", extras = ["testing"] }
pylint = "*"
pylint-quotes = "^0.2.3"
black = "^23.3.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_upwork"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_upwork"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-upwork = 'tap_upwork.tap:TapUpWork.cli'
